# src/backend/open-api/go/model_device_options.go
@@ -1,0 +1,35 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type DeviceOptions struct {
+	Name string `json:"name,omitempty"`
+
+	Wifi DeviceOptionsWifi `json:"wifi,omitempty"`
+
+	Kafka DeviceOptionsKafka `json:"kafka,omitempty"`
+}
+
+// AssertDeviceOptionsRequired checks if the required fields are not zero-ed
+func AssertDeviceOptionsRequired(obj DeviceOptions) error {
+	if err := AssertDeviceOptionsWifiRequired(obj.Wifi); err != nil {
+		return err
+	}
+	if err := AssertDeviceOptionsKafkaRequired(obj.Kafka); err != nil {
+		return err
+	}
+	return nil
+}
+
+// AssertDeviceOptionsConstraints checks if the values respects the defined constraints
+func AssertDeviceOptionsConstraints(obj DeviceOptions) error {
+	return nil
+}
