# src/backend/open-api/go/model_notification.go
@@ -1,0 +1,31 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type Notification struct {
+	DeviceId string `json:"deviceId,omitempty"`
+
+	Topic string `json:"topic,omitempty"`
+
+	Payload string `json:"payload,omitempty"`
+
+	CreatedAt float32 `json:"createdAt,omitempty"`
+}
+
+// AssertNotificationRequired checks if the required fields are not zero-ed
+func AssertNotificationRequired(obj Notification) error {
+	return nil
+}
+
+// AssertNotificationConstraints checks if the values respects the defined constraints
+func AssertNotificationConstraints(obj Notification) error {
+	return nil
+}
